--- a/05_Lesson/main.css
+++ b/05_Lesson/main.css
@@ -5,3 +5,13 @@ body {
   background-color: #333;
   color: aliceblue;
 }
+a {
+  color: aliceblue;
+}
+a:visited {
+  color: lightgray;
+}
+a:hover,
+a:active {
+  color: #eee;
+}
